--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,8 @@
 			</div>
 		</div>
 		<div class="container-fluid footer">
-			<p class="pull-right">&copy; Suyati Technologies <script>document.write(new Date().getFullYear())</script>. All rights reserved.</p>
+			<p class="pull-right">&copy; <a href="https://www.clouddark.xyz/">Cloud Dark</a> Technologies <script>document.write(new Date().getFullYear())</script>. All rights reserved.</p>
+
 		</div>
 	</body>
 </html>
