--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<h2 class="demo-text">LineControl Demo</h2>
+				<h2 class="demo-text">LineControl</h2>
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 nopadding">
